--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/home.html
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/home.html
@@ -40,19 +40,19 @@
                     <div class="slidearea">
                        <h1> Design is About <br><span>communication</span></h1>
                        <h2>Call us: +00 0 1234 5678</h2>
-                       <a href="#">get in touchi</a>
+                       <a class="button" href="#">get in touchi</a>
                     </div>
                 </div><div class="slide">
                     <div class="slidearea">
                         <h1> Design is About <br><span>Teste</span></h1>
                         <h2>Call us: +00 0 1234 5678</h2>
-                        <a href="#">get in touchi</a>
+                        <a class="button" href="#">get in touchi</a>
                      </div>
                 </div><div class="slide">
                     <div class="slidearea">
                         <h1> Design is About <br><span>Algo</span></h1>
                         <h2>Call us: +00 0 1234 5678</h2>
-                        <a href="#">get in touchi</a>
+                        <a class="button" href="#">get in touchi</a>
                      </div>
                 </div>
             </div>
@@ -63,6 +63,299 @@
                 <div class="pointer" ></div>
              </div>
         </section>
+
+
+        <section class="default light">
+            <div class="section-title">About us </div>
+            <div class="section-desc">who we are? </div>
+            <div class="section-body">
+               <div class="section-aboutus">
+                <div class="section-aboutus--left">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam commodi, fugiat sit adipisci excepturi voluptas ullam iste consequuntur, laboriosam quam, ipsa aut magnam. Ipsum, omnis! Consequuntur exercitationem voluptas cupiditate amet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste modi blanditiis dignissimos, eius error laboriosam corrupti culpa quisquam, odit sequi eum, eveniet ullam ducimus aspernatur recusandae. Optio possimus magnam obcaecati.</p> <br>
+                    <a class="button" href="#">Lean More</a>
+                </div>
+                <div class="section-aboutus--right">
+                    <img src="assets/midia/foto9.jpg" alt="">
+                </div>
+               </div>
+            </div>
+        </section>
+
+        <section class="default dark">
+            <div class="section-title">Services </div>
+            <div class="section-desc"> Services that we provide </div>
+            <div class="section-body">
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="assets/images/medalha.png" alt="">
+                        <h4>High Quality Design</h4>
+                        <p>Iste modi blanditiis laboriosam.</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="assets/images/estrela.png" alt="">
+                        <h4>High Quality Design</h4>
+                        <p>Iste modi blanditiis  cimus.</p>
+                    </div> 
+
+                    <div class="section-service">
+                        <img src="assets/images/relogio.png" alt="">
+                        <h4>Regular Updates</h4>
+                        <p>Iste modi blanditiis dignissimos,  laboriosam.</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="assets/images/balao.png" alt="">
+                        <h4>High Quality Design</h4>
+                        <p>Iste modi blanditi laboriosam.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section-title">Our projects </div>
+            <div class="section-desc">what we create </div>
+            <div class="section-body">
+               <div class="section-projects">
+                    <div class="section-projects--filters">
+                        <ul>
+                            <li>All</li>
+                            <li class="active" >Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Developments</li>
+                            <li>misc</li>
+                        </ul>
+
+                    </div>
+
+                    <div class="sections--projects--photos">
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>   
+                                </div>
+                                <img src="assets/midia/foto1.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto2.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto3.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto4.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto5.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto6.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto7.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto9.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto6.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto5.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto1.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="sections-projects--photo">
+                            <div class="sections-projects--photoarea">
+                                <div class="sections-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+
+                                    <P>Vestibulam porta aliquet risus</P>  
+                                </div>
+                                <img src="assets/midia/foto8.jpg" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <a class="button" href="#">More projects</a>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="default dark bg-team">
+            <div class="section-team--area">
+                <div class="section-title">Our team </div>
+
+                <div class="section-desc"> Our Co-Workers </div>
+                <div class="section-body">
+                    <div class="section-team">
+                        <div class="sliders"> 
+
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="assets/midia/mulher1.png" alt="#">
+                                    <div class="section-team--name">Jane Doe </div>
+                                    <div class="section-team--role">Master Mind</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="assets/midia/homem1.png" alt="#">
+                                    <div class="section-team--name">Mike chiller </div>
+                                    <div class="section-team--role">Create Head</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="section-team--avatar" src="assets/midia/mulher2.png" alt="#">
+                                    <div class="section-team--name">Anna jhons </div>
+                                    <div class="section-team--role">Technical Lead</div>
+                                    <div class="section-team--social">
+                                        <a href="#"><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href="#"><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-pointers">
+                        <div class="pointer active" ></div>
+                        <div class="pointer" ></div>
+                        <div class="pointer" ></div>
+                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section-title">Happy clients</div>
+            <div class="section-desc">client reviews </div>
+            <div class="section-body">
+               <div class="section-happy">
+                    <div class="happy--area">
+                        <div class="section-happy--img">
+
+                            <img src="assets/midia/homem2.png" alt="">
+                            </div>
+                            <div class="section-happy--name">John Doe </div>
+                            <div class="section-happy--role">Head of PR Departament</div>
+                        
+                        </div>
+                    </div>
+               </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
