--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/home.html
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/home.html
@@ -640,7 +640,42 @@
                 </div>
             </div>
         </section>
+        <div class="section--header--icons">
+            <div class="header--icons">
+                <div class="image--header-flex-2" ><img src="assets/images/share.png" alt="">
+                <p>tel about us:</p></div>
+                <div class="image--header " >
+                    <div id="style--img01"><img src="assets/images/twitter.png" alt=""></div>
+                    <p>152</p>
+                </div>
+                <div class="image--header" >
+                    <div id="style--img02" ><img src="assets/images/linkedin.png" alt=""></div>
+                    <p>31</p>
+                </div>
+                <div class="image--header" >
+                    <div id="style--img03" ><img src="assets/images/facebook.png" alt=""></div>
+                    <p>165</p>
+                </div>
+                <div class="image--header" >
+                    <div id="style--img04" ><img src="assets/images/googleplus.png" alt=""></div>
+                    <p>22</p>
+                </div>
+                <div class="image--header" >
+                    <div id="style--img05"><img src="assets/images/pinterest.png" alt=""></div>
+                    <p>165</p>
+                </div>
+            </div>
+        </div>
+        <section class="default light">
 
+            <div class="section-title">contact us </div>
+            <div class="section-desc">even more features available features available</div>
+            <div class="section-body">
+
+                    
+                
+            </div>
+    </section>
     </main>
     <footer>
 
