--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/home.html
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/home.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, minimun-scale=1, initial-scale=1">
+    <meta name="viewport" content="width=device-width,minimun-scale=1,initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,700&display=swap"    rel="stylesheet">
@@ -15,9 +15,12 @@
         <div class="logo">
 
             <div class="logoimg"><img src="assets/images/logo.png" alt=""></div>
+            
         </div>
         <div class="menu">
+            <img class="menu-opener" src="assets/images/menu.png" >
             <nav>
+                
                 <ul>
                     <li class="active"><a href="">home </a></li>
                     <li><a href="">About Us</a></li>
