fim do ultimo site do curso
Ultimo site do curso HTML E CSS

--- a/sites-desenvolvidos-no-curso/site8/portifolio/inde.html
+++ b/sites-desenvolvidos-no-curso/site8/portifolio/inde.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>João Silva </title>
 </head>
 <body>
     <header>
@@ -22,14 +22,14 @@
                 <div class="name">I'm João Silva</div>
                 <div class="buttons">
                     <a href="#">More About Me</a>
-                    <a href="#">Hire Me</a>
+                    <a href="#" class="light" >Hire Me</a>
                 </div>
             </div>
         </div>
-        <div class="rightside">rrr</div>
+        <div class="rightside"></div>
     </section>
     <footer>
-        vvvv
+      Copyright @2021 all right reserved | This template is made with by <a href="https://github.com/Josemar2002">Josemar Rodrigues</a>
     </footer>
 </body>
 </html>
